# ptcg_abc

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: damage-prevention-pokemon.md  erawan-runbook.md  implementation-plan.md  kaggle-first-workflow.md  latent_drl.md  phase-1-conclusion.md  phase-2-conclusion.md  phase-3-baseline.md  phase-3-conclusion.md  phase-4-rl-plan.md  phase-5-changelog.md  phase-5-erawan-runbook.md  phase-5-master-plan.md  project-state.md  ptcg_rl_advanced_training_plan.md  ptcg_rl_evaluation_plan.md  ptcg_rl_strategy_recommendation.md  rule-inventory.md
reports/: legal_card_candidates.md  missing_limitless_cards.md  missing_limitless_cards_tef_por.md  phase3_closeout.json  phase3_closeout.md  phase3_required_benchmark.json  phase3_required_benchmark.md  phase5_alpha_eval_dashboard.html  phase5_alpha_eval_dashboard_matchups.csv  phase5_alpha_eval_dashboard_per_deck.csv  phase5_alpha_eval_dashboard_summary.csv  phase5_alpha_eval_winrate_timeseries.html  phase5_alpha_eval_winrate_timeseries_summary.csv  phase5_alpha_iter0000_full_vs_rule_30g_single_model.json  phase5_alpha_iter0000_full_vs_rule_30g_single_model.md  phase5_alpha_iter0000_specialists_full_vs_rule_30g.json  phase5_alpha_iter0000_specialists_full_vs_rule_30g.md  phase5_generalist_13deck_vs_10k_comparison.json  phase5_generalist_13deck_vs_10k_comparison.md  phase5_generalist_search_10g.json  phase5_generalist_search_10g.md  phase5_generalist_search_30g.json  phase5_generalist_search_30g.md  sample_dragapult_benchmark.json  sample_dragapult_benchmark.md  (+14 more)
(+101 files in other folders)
