[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ptcg-abc"
version = "0.1.0"
description = "Pokemon TCG AI Battle Challenge workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
rl = [
  "Pillow>=10.0",
  "pypdf>=4.0",
  "torch>=2.4",
]

[project.scripts]
ptcg-abc = "ptcg_abc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
